--- a/app/src/main/res/layout/view_todo_activity_main.xml
+++ b/app/src/main/res/layout/view_todo_activity_main.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:elevation="4dp"
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true"
+    xmlns:tools="http://schemas.android.com/tools">
+
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -9,17 +19,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/title_view_todo_activity_main"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:text="test"
         android:textSize="30dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/description_view_todo_activity_main"
+        android:textDirection="inherit"
+
+        android:maxLines="1"
         android:textSize="30dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/date_view_todo_activity_main"
+        android:maxLines="1"
         android:textSize="30dp"/>
 
 </android.support.constraint.ConstraintLayout>
+
+</android.support.v7.widget.CardView>
