--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorYellow">#FFD700</color>
+    <color name="colorOrange">#FF4500</color>
+    <color name="colorBlue">#008B8B</color>
+    <color name="colorGreen">#008000</color>
+    <color name="colorRed">#FF0000</color>
 </resources>
