--- a/app/src/main/res/layout/view_todo_activity_main.xml
+++ b/app/src/main/res/layout/view_todo_activity_main.xml
@@ -29,15 +29,26 @@
         android:layout_height="wrap_content"
         android:id="@+id/description_view_todo_activity_main"
         android:textDirection="inherit"
-
+        android:ellipsize="end"
         android:maxLines="1"
-        android:textSize="30dp"/>
+        android:textSize="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/title_view_todo_activity_main"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/date_view_todo_activity_main"
         android:maxLines="1"
-        android:textSize="30dp"/>
+        android:ellipsize="end"
+        android:textSize="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/description_view_todo_activity_main"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/repeat_view_todo_activity_main"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textSize="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/date_view_todo_activity_main"/>
 
 </android.support.constraint.ConstraintLayout>
 
