add sorting by Title and Date

--- a/todo_with_fragments/app/src/main/res/layout/fragment_add.xml
+++ b/todo_with_fragments/app/src/main/res/layout/fragment_add.xml
@@ -189,6 +189,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView_red_second"
+        android:visibility="gone"
 
         android:layout_marginVertical="@dimen/fab_margin"/>
 </android.support.constraint.ConstraintLayout>
