--- a/todo_with_fragments/app/src/main/res/layout/content_main.xml
+++ b/todo_with_fragments/app/src/main/res/layout/content_main.xml
@@ -8,10 +8,47 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_activity_main"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title Sort(by increase)"
+                android:textSize="11dp"
+                android:background="@color/colorBlueClicked"
+                android:id="@+id/btn_sort_activity_main"
+                android:paddingHorizontal="10dp"
+                android:layout_margin="5.0dp"
+                />
+
+            <Button
+                android:id="@+id/btn_sort_date_activity_main"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5.0dp"
+                android:background="@color/colorBlueClicked"
+                android:text="Date Sort(by increase)"
+                android:textSize="11dp"
+                android:paddingHorizontal="10dp"
+                 />
+        </LinearLayout>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_activity_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_sort_activity_main"/>
+
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
