--- a/todo_with_fragments/app/src/main/res/layout/view_todo_activity_main.xml
+++ b/todo_with_fragments/app/src/main/res/layout/view_todo_activity_main.xml
@@ -50,6 +50,12 @@
         android:ellipsize="end"
         android:textSize="15dp"
         app:layout_constraintTop_toBottomOf="@+id/date_view_todo_activity_main"/>
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/check_box_multiSelect_remove"
+        android:visibility="invisible"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
 
