--- a/ToDoWithRoom/todo_with_fragments/app/src/main/res/values/dimens.xml
+++ b/ToDoWithRoom/todo_with_fragments/app/src/main/res/values/dimens.xml
@@ -1,3 +1,8 @@
 <resources>
     <dimen name="fab_margin">25dp</dimen>
+    <dimen name="text_size_content_main">11sp</dimen>
+    <dimen name="padding_horizontal_content_main">10dp</dimen>
+    <dimen name="margin_top_fragment_add">25dp</dimen>
+    <dimen name="text_size_todo_recycler_item_title_activity_main">30sp</dimen>
+    <dimen name="text_size_todo_recycler_item_activity_main">15sp</dimen>
 </resources>
